NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Case_Order_product_lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Order_product_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Order product lookup</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>