NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type</label>
    <referenceTo>NATT_Case_Sales_Order__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>