NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CONATINER_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CONATINER_Product_Name__c</fullName>
    <label>CONATINER Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>