NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CONTAINER_Is_main_product__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Is_main_product__c</fullName>
    <formula>AND(ISBLANK(SBQQ__QuoteLine__r.SBQQ__OptionLevel__c),ISBLANK(SBQQ__QuoteLine__r.SBQQ__RequiredBy__c),SBQQ__QuoteLine__r.SBQQ__Bundle__c)</formula>
    <label>Is main product</label>
    <type>Checkbox</type>
</CustomField>