NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CONTAINER_Is_product_line_valid__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Is_product_line_valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Product</label>
    <type>Checkbox</type>
</CustomField>