NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CONTAINER_Net_total_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Net_total_Price__c</fullName>
    <formula>IF( CONTAINER_Is_main_product__c ,  Order.CONTAINER_Net_total_Price__c ,NULL)</formula>
    <label>Net total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>