NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CONTAINER_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Part_Number__c</fullName>
    <label>Customer Part number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>