NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CONTAINER_Tax__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax</label>
    <type>Checkbox</type>
</CustomField>