NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_Available__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Available__c</fullName>
    <formula>IF(CTBR_QuantityAvailable__c &gt;0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>