NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_Deductibles__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Deductibles__c</fullName>
    <description>twin field</description>
    <label>CTBR Deductibles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>