NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_FixedPayment__c.field-meta.xml
<CustomField>
    <fullName>CTBR_FixedPayment__c</fullName>
    <label>Fixed Payment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>