NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_FreightPrice__c.field-meta.xml
<CustomField>
    <fullName>CTBR_FreightPrice__c</fullName>
    <label>Freight Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>