NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_Global_Price_List_Code__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Global_Price_List_Code__c</fullName>
    <label>Global Price List Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>