NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_Has_Global_Price_List__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Has_Global_Price_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Global Price List</label>
    <type>Checkbox</type>
</CustomField>