NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_Hours__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Hours__c</fullName>
    <description>twin field</description>
    <label>CTBR Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>