NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_OutOfStockDuringApproval__c.field-meta.xml
<CustomField>
    <fullName>CTBR_OutOfStockDuringApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CTBR - indicates that the customer approved the order when the line item was out of stock (added to their list to create a new order from once in stock)</description>
    <label>Out Of Stock During Approval</label>
    <type>Checkbox</type>
</CustomField>