NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_Payment_Condition_Code__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Payment_Condition_Code__c</fullName>
    <label>Payment Condition Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>