NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_QuantityAvailable__c.field-meta.xml
<CustomField>
    <fullName>CTBR_QuantityAvailable__c</fullName>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>