NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_SapItemStatus__c.field-meta.xml
<CustomField>
    <fullName>CTBR_SapItemStatus__c</fullName>
    <label>SAP Item Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>