NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_TotalICMSST__c.field-meta.xml
<CustomField>
    <fullName>CTBR_TotalICMSST__c</fullName>
    <label>Total ICMS ST</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>