NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/CTBR_TotalIPI__c.field-meta.xml
<CustomField>
    <fullName>CTBR_TotalIPI__c</fullName>
    <label>Total IPI</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>