NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>Order.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>