NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <formula>Text(Order.NATT_Warehouse__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depot</label>
    <type>Text</type>
</CustomField>