NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>