NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Description_Copy__c.field-meta.xml
<CustomField>
    <fullName>Description_Copy__c</fullName>
    <label>Description Copy</label>
    <type>TextArea</type>
</CustomField>