NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Direct_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Direct_Delivery__c</fullName>
    <formula>Product2.NATT_DirectDelivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Delivery</label>
    <type>Checkbox</type>
</CustomField>