NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Estimated_Availability__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Availability__c</fullName>
    <label>Estimated Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>