NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Update__c</fullName>
    <formula>DATEVALUE(Order.NATT_Last_Update__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Update</label>
    <type>Date</type>
</CustomField>