NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Lynx_Fleet_Prepayment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Lynx_Fleet_Prepayment_Terms__c</fullName>
    <label>Lynx Fleet Prepayment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>