NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NAC_Note__c.field-meta.xml
<CustomField>
    <fullName>NAC_Note__c</fullName>
    <label>Note</label>
    <length>50</length>
    <type>Text</type>
</CustomField>