NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account_Id__c</fullName>
    <description>for data loader updates</description>
    <formula>Order.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>