NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Available_Promise_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Available_Promise_Date__c</fullName>
    <description>Avalaible to Promis date</description>
    <label>Available Date</label>
    <type>Date</type>
</CustomField>