NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Backordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Backordered_Quantity__c</fullName>
    <description>Back Order</description>
    <label>Backordered Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>