NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_BluEdge__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge__c</fullName>
    <description>this field is a part of bluedge</description>
    <formula>Product2.NATT_EMCC__c</formula>
    <label>BluEdge</label>
    <type>Checkbox</type>
</CustomField>