NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_BluEdge_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Id__c</fullName>
    <formula>IF(AND(NATT_Grouped_By_Line_Number__c = 1, NOT(ISBLANK(NATT_Policy_Code__c)), NATT_JDE_SO_Last_Line_Status__c &gt; 543),
Order.NATT_BluEdge_Id__c,NULL)</formula>
    <label>Legacy BluEdge ID</label>
    <type>Text</type>
</CustomField>