NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Canceled_Item__c.field-meta.xml
<CustomField>
    <fullName>NATT_Canceled_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if the order item has been cancelled in JDE. (Used for PPG B2B Commerce)</description>
    <label>Canceled Item</label>
    <type>Checkbox</type>
</CustomField>