NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_CartItemLineNumber__c.field-meta.xml
<CustomField>
    <fullName>NATT_CartItemLineNumber__c</fullName>
    <description>SFDC does not maintain the order of the cart items when order items are created.  This field indicates the order the customer add to the cart.</description>
    <label>Cart Item Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>