NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Current_Effective_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Current_Effective_Quantity__c</fullName>
    <description>sums the quantity of the ordered units including the amendments</description>
    <label>Current Effective Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>