NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Deductibles2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Deductibles2__c</fullName>
    <description>twin field</description>
    <label>Deductibles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>