NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_EMCC__c.field-meta.xml
<CustomField>
    <fullName>NATT_EMCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BluEdge</label>
    <type>Checkbox</type>
</CustomField>