NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Feature_Category__c.field-meta.xml
<CustomField>
    <fullName>NATT_Feature_Category__c</fullName>
    <description>stores the category used during configuration of the quote.</description>
    <label>Feature Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>