NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Grouped_By_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Grouped_By_Line_Number__c</fullName>
    <description>The quote line number of the unit. used to group options and their unit.</description>
    <label>Grouped By Line Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>