NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_HasCore__c.field-meta.xml
<CustomField>
    <fullName>NATT_HasCore__c</fullName>
    <formula>Product2.NATT_CoreCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Core?</label>
    <type>Checkbox</type>
</CustomField>