NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Inventory__c.field-meta.xml
<CustomField>
    <fullName>NATT_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Serial Number</label>
    <referenceTo>NATT_Inventory__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>