NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Is_Base_Unit__c.field-meta.xml
<CustomField>
    <fullName>NATT_Is_Base_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is a top level bundle that is a unit that has options associated with it.</description>
    <label>Is Base Unit</label>
    <type>Checkbox</type>
</CustomField>