NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_IsRushFee__c.field-meta.xml
<CustomField>
    <fullName>NATT_IsRushFee__c</fullName>
    <formula>IF(AND(TEXT(Type)==&apos;Delivery Charge&apos;,contains(Product2.Name,&apos;Rush Fee&apos;)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Rush Fee?</label>
    <type>Checkbox</type>
</CustomField>