NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_JDEItemStatus__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDEItemStatus__c</fullName>
    <description>Boomi integration field to populate canceled, dropship, etc</description>
    <label>JDE Item Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>