NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Locked__c.field-meta.xml
<CustomField>
    <fullName>NATT_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set by integration. this is the field that should be evaluated for most validations for cpq reconfiguration</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>