NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Lotus_Notes_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Lotus_Notes_Price__c</fullName>
    <description>Quote Line Twin Field</description>
    <label>Lotus Notes Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>