NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Order_RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_RecordType_Id__c</fullName>
    <description>NATT: convenience field to grab the order&apos;s RT</description>
    <formula>CASESAFEID(Order.RecordTypeId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order RecordType Id</label>
    <type>Text</type>
</CustomField>