NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Order_RT_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_RT_Developer_Name__c</fullName>
    <formula>Order.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order RT Developer Name</label>
    <type>Text</type>
</CustomField>