NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Type__c</fullName>
    <formula>TEXT(Order.Type)</formula>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>