NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_OrderBy__c.field-meta.xml
<CustomField>
    <fullName>NATT_OrderBy__c</fullName>
    <description>Used in the PPG store to set the order by.  This field originally uses the order entered by the customer until JDE returns updated line numbers.</description>
    <formula>if(ISNULL(NATT_OrderLineNumber__c), NATT_CartItemLineNumber__c, NATT_OrderLineNumber__c)</formula>
    <label>Order By</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>