NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_OrderItemKeyId__c.field-meta.xml
<CustomField>
    <fullName>NATT_OrderItemKeyId__c</fullName>
    <description>JDE external ID for the order line item</description>
    <externalId>true</externalId>
    <label>Order Item Key ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>