NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_OrderLineNumber__c.field-meta.xml
<CustomField>
    <fullName>NATT_OrderLineNumber__c</fullName>
    <description>Field representing the order line number in JDE. Standard salesforce LineNumber field is unusable.</description>
    <label>Order Line Number</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>