NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_OrderNumberSFDC__c.field-meta.xml
<CustomField>
    <fullName>NATT_OrderNumberSFDC__c</fullName>
    <description>convenience field used the order item trigger handler so a query to the order is not required</description>
    <formula>Order.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number SFDC</label>
    <type>Text</type>
</CustomField>