NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Original_JDE_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Original_JDE_Sales_Order__c</fullName>
    <label>Original JDE Sales Order #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>