NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Original_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>