NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_P_N__c.field-meta.xml
<CustomField>
    <fullName>NATT_P_N__c</fullName>
    <description>Has a value if the line item is a Kit. Null if the line item is a part of the unit</description>
    <label>P/N</label>
    <length>50</length>
    <type>Text</type>
</CustomField>