NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Part_Information__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part_Information__c</fullName>
    <formula>IF(NATT_Is_Base_Unit__c,
Order.NATT_Configured_Unit_Code__c,
IF(OR(SBQQ__QuoteLine__r.SBQQ__ProductCode__c  = &apos;Special Request&apos;, SBQQ__QuoteLine__r.SBQQ__ProductName__c = &apos;Special Paint&apos;),
NATT_Special_Request_Notes__c,
IF(NOT(ISBLANK(NATT_P_N__c)),
NATT_P_N__c,
SBQQ__QuoteLine__r.SBQQ__ProductCode__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Information</label>
    <type>Text</type>
</CustomField>