NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Policy_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Policy_Code__c</fullName>
    <description>used for tavant integration.</description>
    <label>Policy Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>