NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Name__c</fullName>
    <description>used in flow to present the name of the order product during selection</description>
    <formula>Product2.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>