NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quantity_Remaining__c</fullName>
    <formula>Quantity - NATT_Shipped_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>