NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_QuantityUOM__c.field-meta.xml
<CustomField>
    <fullName>NATT_QuantityUOM__c</fullName>
    <formula>TEXT(Product2.QuantityUnitOfMeasure)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Unit of Measure</label>
    <type>Text</type>
</CustomField>