NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_QuoteLine_Id_for_Amendment__c.field-meta.xml
<CustomField>
    <fullName>NATT_QuoteLine_Id_for_Amendment__c</fullName>
    <formula>If(ISBLANK(SBQQ__QuoteLine__r.SBQQ__UpgradedAsset__c), SBQQ__QuoteLine__r.Id,  SBQQ__QuoteLine__r.SBQQ__UpgradedAsset__r.SBQQ__QuoteLine__r.Id)</formula>
    <label>QuoteLine Id for Amendment</label>
    <type>Text</type>
</CustomField>