NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Remaining_Quantity__c</fullName>
    <formula>IF((Quantity -  NATT_Shipped_Quantity__c) &gt; 0, Quantity -  NATT_Shipped_Quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Order remaining quantity to be shipped.</inlineHelpText>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>