NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Scheduled_Pick_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Scheduled_Pick_Date__c</fullName>
    <description>NATT</description>
    <label>Scheduled Pick Date</label>
    <type>Date</type>
</CustomField>