NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Shipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipped_Quantity__c</fullName>
    <label>Quantity shipped to date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>