NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Unit_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit_Line_Number__c</fullName>
    <formula>if( NATT_Is_Base_Unit__c ,  LineNumber , SBQQ__RequiredBy__r.LineNumber )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>