NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit_Name__c</fullName>
    <formula>IF(NATT_Is_Base_Unit__c = TRUE, Product2.Name, TEXT(SBQQ__QuoteLine__r.NATT_Unit__c))</formula>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>