NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Usage__c.field-meta.xml
<CustomField>
    <fullName>NATT_Usage__c</fullName>
    <description>used for tavant integration. Number of hours for the warranty coverage</description>
    <label>Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>