NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/NATT_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>NATT_Warehouse__c</fullName>
    <description>Warehouse identifier from order header.</description>
    <formula>TEXT(Order.NATT_Warehouse__c)</formula>
    <label>Warehouse</label>
    <type>Text</type>
</CustomField>