NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>Order.NATT_JDE_Sales_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>