NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>For use with Backorder Report page table</description>
    <formula>Order.NATT_JdeOrderType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>