NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Parent_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order_Type__c</fullName>
    <formula>Order.NATT_JdeOrderTypeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Order Type</label>
    <type>Text</type>
</CustomField>