NATTQA-ENV/force-app/main/default/objects/OrderItem/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <formula>Product2.NATT_P_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>